<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".LocationActivity">

    <ImageView
        android:id="@+id/location_img_gps"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/baseline_gps_24" />

    <TextView
        android:id="@+id/location_txt_where"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="20dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/where_are_you"
        android:textAlignment="center"
        android:textColor="@color/blue_theme"
        android:textColorHighlight="@color/blue_theme"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location_txt_your"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/your_location_on"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textColorHighlight="@color/grey"
        android:textSize="18sp" />


    <Button
        android:id="@+id/location_btn_enable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circular_button"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center"
        android:text="@string/enable_location"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:backgroundTint="@color/blue_theme"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>